--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,184 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  position:relative;
+
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+  width: 183px;
+  height: 32px;
+  top: 30px;
+  left: 64px;
+}
+
+.logo_place_header {
+  position:absolute;
+  z-index: 9999;
+}
+
+.header__title {
+    width: 730px;
+    margin-left: 64px;
+    line-height: 96px;
+    font-size: 102px;
+    font-weight: bold;
+    z-index: 9999;
+}
+
+.header__subtitle {
+  width: 388px;
+  left:64px;
+  bottom: 30px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  z-index: 9999;
+}
+
+.header__link {
+  font-size: 18px;
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.header__main-illustration{
+  height: 608px;
+  width: 765px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
+  top: 64px;
+  right: 0;
+  position: absolute;
+  background-color:#2f80ed ;
+}
+
+.description {
+  background-color: #ffffff;
+  color: #000000;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+
+}
+
+.two-columns {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  width: 80%;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: 784px;
+
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+  word-wrap:break-word;
+
+}
+
+.two-columns__main-text {
+  width: 80%;
+  display:flex;
+  flex-direction: column;
+  line-height: 34px;
+  font-size: 24px;
+
+}
+
+.two-columns__paragraph_normal {
+  font-weight: normal;
+
+}
+
+.two-column__paragraph_margin {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.two-column__main-text_paragraph_bold {
+  font-weight: bold;
+}
+
+.digits {
+  background-color: #ffffff;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid red;
+}
+
+.section-title {
+  margin-top: 100px;
+  margin-bottom: 20px;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.section-subtitle {
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+
+}
+
+.table {
+  width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+  display:flex;
+  flex-direction: column;
+ }
+
+.table__row {
+  margin-top: 60px;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -29,3 +200,24 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
+.feynman
+ {
+   background-color: #f2f2f2;
+   color: #000000;
+   border: 1px solid red;
+ }
+
+ .kaufman
+ {
+   background-color: #000000;
+   color: #ffffff;
+   /*border: 1px solid red;*/
+ }
+
+ .footer
+ {
+   background-color: #000000;
+   color: #ffffff;
+   /*border: 1px solid red;*/
+ }
