--- a/styles/style.css
+++ b/styles/style.css
@@ -21,16 +21,19 @@
 
 }
 
-.logo {
+.logo_place_header {
   width: 183px;
   height: 32px;
   top: 30px;
   left: 64px;
-}
-
-.logo_place_header {
   position:absolute;
   z-index: 9999;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+  left: 64px;
 }
 
 .header__title {
@@ -136,7 +139,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid red;
+
 }
 
 .section-title {
@@ -166,7 +169,7 @@
   margin-bottom: 100px;
   display:flex;
   flex-direction: column;
- }
+}
 
 .table__row {
   margin-top: 60px;
@@ -202,22 +205,218 @@
 }
 
 .feynman
- {
-   background-color: #f2f2f2;
-   color: #000000;
-   border: 1px solid red;
- }
+{
+  background-color: #f2f2f2;
+  color: #000000;
+  height: 890px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position:relative;
 
- .kaufman
- {
-   background-color: #000000;
-   color: #ffffff;
-   /*border: 1px solid red;*/
- }
+}
 
- .footer
- {
-   background-color: #000000;
-   color: #ffffff;
-   /*border: 1px solid red;*/
- }
+.feynman__title {
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  width: 648px;
+  margin-top: 100px;
+  text-align: center;
+  z-index: 10;
+}
+
+.feynman__subtitle{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin-top: 70px;
+  z-index: 10;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-decoration: none;
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  color: #2f80ed;
+}
+
+ .feynman__img {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.kaufman
+{
+  background-color: #000000;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position:relative;
+  overflow: hidden;
+}
+
+.kaufman__title {
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  width: 60%;
+  margin-top: 90px;
+  text-align: center;
+  z-index: 10;
+}
+
+.kaufman__subtitle {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  margin-top: 20px;
+  text-align: center;
+  z-index: 10;
+}
+
+.kaufman__table {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 90px;
+  display:flex;
+  flex-direction: column;
+  z-index: 10;
+}
+
+.kaufman__table__row {
+  margin-top: 80px;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.kaufman__table__cell {
+  width: 200px;
+}
+
+.kaufman__table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+
+}
+
+.kaufman__table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-top: 20px;
+
+}
+
+.triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+}
+
+.footer
+{
+  background-color: #000000;
+  color: #ffffff;
+  min-height: 350px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid red;
+}
+
+.footer__columns {
+  margin-top: 60px;
+  /*margin-bottom: 40px;*/
+  width: 90%;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid red;
+}
+
+.footer__content_copyright {
+  flex-basis: 711px;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid red;
+}
+
+.footer__content_info {
+  display:flex;
+  flex-direction: column;
+  border: 1px solid red;
+}
+
+.footer__content_social {
+  display:flex;
+  flex-direction: column;
+  border: 1px solid red;
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin-top: 18px;
+  margin-bottom: 18px;
+  margin-left: 0;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  border: 1px solid red;
+}
+
+.footer__column-links {
+  margin-top: 20px;
+  margin-bottom: 16px;
+  display:flex;
+  flex-direction: column;
+  border: 1px solid red;
+}
+
+.footer__column-link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.icon-size {
+  height: 16px;
+  width: 16px;
+}
+.indent_no {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/*
+<div class="footer__column-links">
+            <p><a class="footer__column-link icon-size" href="#"><img src="images/facebook_color_white.svg"
+              alt=facebook"> Facebook</a></p>
+            <p><a class="footer__column-link icon-size" href="#"><img src="images/vk_color_white.svg"
+              alt=vk"> ВКонтакте</a></p>
+            <p><a class="footer__column-link icon-size" href="#"><img src="images/instagram_color_white.svg"
+                alt=vk"> Instagram</a></p>
+          </div>*/
+
