--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,19 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  color: #000000;
+}
+
+p {
+  margin: 0;
+}
+
+h1 {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
 }
 
 .header {
@@ -14,35 +27,36 @@
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
-  color: #000000;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
   position:relative;
+}
 
+.logo {
+  width: 183px;
 }
 
 .logo_place_header {
-  width: 183px;
   height: 32px;
   top: 30px;
   left: 64px;
   position:absolute;
-  z-index: 9999;
+  z-index: 9;
 }
 
 .logo_place_footer {
-  width: 183px;
   height: 35px;
   left: 64px;
 }
 
 .header__title {
-    width: 730px;
-    margin-left: 64px;
-    line-height: 96px;
-    font-size: 102px;
-    font-weight: bold;
-    z-index: 9999;
+  width: 730px;
+  margin-left: 64px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  z-index: 9;
 }
 
 .header__subtitle {
@@ -53,7 +67,7 @@
   font-size: 18px;
   font-weight: normal;
   position: absolute;
-  z-index: 9999;
+  z-index: 9;
 }
 
 .header__link {
@@ -68,13 +82,12 @@
   position: absolute;
   bottom: 0;
   right: 0;
-
 }
 
 .header__square-pic {
   height: 568px;
   width: 568px;
-  top: 64px;
+  /*top: 64px;*/
   right: 0;
   position: absolute;
   background-color:#2f80ed ;
@@ -82,11 +95,9 @@
 
 .description {
   background-color: #ffffff;
-  color: #000000;
   display:flex;
   flex-direction: row;
   justify-content: center;
-
 }
 
 .two-columns {
@@ -97,7 +108,6 @@
   flex-direction: row;
   justify-content: space-between;
   min-width: 784px;
-
 }
 
 .two-columns__brief {
@@ -107,21 +117,18 @@
   font-weight: normal;
   color: #2f80ed;
   word-wrap:break-word;
-
 }
 
 .two-columns__main-text {
   width: 80%;
   display:flex;
   flex-direction: column;
-  line-height: 34px;
-  font-size: 24px;
-
 }
 
-.two-columns__paragraph_normal {
+.two-columns__paragraph {
   font-weight: normal;
-
+  line-height: 34px;
+  font-size: 24px;
 }
 
 .two-column__paragraph_margin {
@@ -238,11 +245,9 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  text-decoration: none;
   position: absolute;
   right: 48px;
   top: 50%;
-  color: #2f80ed;
 }
 
  .feynman__img {
@@ -374,14 +379,12 @@
   font-weight: normal;
   margin-top: 18px;
   margin-bottom: 18px;
-  margin-left: 0;
 }
 
 .footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
-
 }
 
 .footer__column-links {
@@ -398,16 +401,13 @@
   font-weight: normal;
   margin-top: 0;
   margin-bottom: 0;
-  color: #ffffff;
   text-decoration: none;
+  color: #ffffff;
 }
 
 .icon-size {
   height: 16px;
   width: 16px;
 }
-.indent_no {
-  margin-top: 0;
-  margin-bottom: 0;
-}
+
 
