--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,6 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
-  color: #000000;
 }
 
 p {
@@ -22,11 +21,16 @@ h2 {
   margin: 0;
 }
 
+h3 {
+  margin: 0;
+}
+
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
+  color: #000000;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -47,7 +51,6 @@ h2 {
 
 .logo_place_footer {
   height: 35px;
-  left: 64px;
 }
 
 .header__title {
@@ -87,14 +90,15 @@ h2 {
 .header__square-pic {
   height: 568px;
   width: 568px;
-  /*top: 64px;*/
+  top: 64px;
   right: 0;
-  position: absolute;
   background-color:#2f80ed ;
+  position: absolute;
 }
 
 .description {
   background-color: #ffffff;
+  color: #000000;
   display:flex;
   flex-direction: row;
   justify-content: center;
@@ -126,38 +130,48 @@ h2 {
 }
 
 .two-columns__paragraph {
-  font-weight: normal;
   line-height: 34px;
   font-size: 24px;
+  font-weight: normal;
 }
 
-.two-column__paragraph_margin {
+.two-columns__paragraph_margin {
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
-.two-column__main-text_paragraph_bold {
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
   font-weight: bold;
 }
 
 .digits {
   background-color: #ffffff;
-  color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .section-title {
-  margin-top: 100px;
-  margin-bottom: 20px;
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
   text-align: center;
+}
 
+.section-title_theme_light {
+  margin-top: 100px;
+  margin-bottom: 20px;
+  color:  #000000;
+}
+
+.section-title_theme_dark {
+  margin-top: 90px;
+  margin-bottom: 20px;
+  color: #ffffff;
+  z-index: 9;
 }
 
 .section-subtitle {
@@ -166,69 +180,99 @@ h2 {
   font-size: 24px;
   font-weight: normal;
   text-align: center;
+}
 
+.section-subtitle_theme_light {
+  color: #000000;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  z-index: 9;
 }
 
 .table {
-  width: 1100px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 100px;
   display:flex;
   flex-direction: column;
 }
 
+.table_theme_light {
+  width: 1100px;
+  margin-bottom: 100px;
+}
+
+.table_theme_dark {
+  margin-bottom: 90px;
+  z-index: 10;
+}
+
 .table__row {
-  margin-top: 60px;
   display:flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.table__cell {
+.table__cell_theme_light {
   width: 250px;
+  margin-top: 60px;
+  margin-right: 0;
+  color: #000000;
+}
+
+.table__cell_theme_dark {
+  width: 200px;
+  margin-top: 80px;
+  margin-right: 0;
+  color: #ffffff;
 }
 
 .table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+}
 
+.table__heading_theme_light {
+  color: #000000;
+}
+
+.table__heading_theme_dark {
+  color: #ffffff;
 }
 
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-
+  margin-top: 20px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+.table__text_theme_light {
+  color: #000000;
 }
 
-.feynman
-{
+.table__text_theme_dark {
+  color: #ffffff;
+}
+
+.feynman {
+  height: 890px;
   background-color: #f2f2f2;
   color: #000000;
-  height: 890px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position:relative;
-
 }
 
 .feynman__title {
+  width: 648px;
+  margin-top: 100px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
-  width: 648px;
-  margin-top: 100px;
   text-align: center;
   z-index: 10;
 }
@@ -248,6 +292,7 @@ h2 {
   position: absolute;
   right: 48px;
   top: 50%;
+  color: #2f80ed;
 }
 
  .feynman__img {
@@ -258,8 +303,7 @@ h2 {
   left: 0;
 }
 
-.kaufman
-{
+.kaufman {
   background-color: #000000;
   color: #ffffff;
   display: flex;
@@ -269,62 +313,7 @@ h2 {
   overflow: hidden;
 }
 
-.kaufman__title {
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: bold;
-  width: 60%;
-  margin-top: 90px;
-  text-align: center;
-  z-index: 10;
-}
-
-.kaufman__subtitle {
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  width: 60%;
-  margin-top: 20px;
-  text-align: center;
-  z-index: 10;
-}
-
-.kaufman__table {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 90px;
-  display:flex;
-  flex-direction: column;
-  z-index: 10;
-}
-
-.kaufman__table__row {
-  margin-top: 80px;
-  display:flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.kaufman__table__cell {
-  width: 200px;
-}
-
-.kaufman__table__heading {
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
-
-}
-
-.kaufman__table__text {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-  margin-top: 20px;
-
-}
-
-.triangle {
+.kaufman__triangle {
   width: 877px;
   height: 877px;
   position: absolute;
@@ -332,15 +321,13 @@ h2 {
   right: -210px;
 }
 
-.footer
-{
+.footer {
   background-color: #000000;
   color: #ffffff;
   min-height: 350px;
   display:flex;
   flex-direction: row;
   justify-content: center;
-
 }
 
 .footer__columns {
@@ -350,27 +337,23 @@ h2 {
   display:flex;
   flex-direction: row;
   justify-content: space-between;
-
 }
 
-.footer__content_copyright {
+.footer__column_content_copyright {
   flex-basis: 711px;
   display:flex;
   flex-direction: column;
   justify-content: space-between;
-
 }
 
-.footer__content_info {
+.footer__column_content_info {
   display:flex;
   flex-direction: column;
-
 }
 
-.footer__content_social {
+.footer__column_content_social {
   display:flex;
   flex-direction: column;
-
 }
 
 .footer__author {
@@ -390,9 +373,9 @@ h2 {
 .footer__column-links {
   margin-top: 20px;
   margin-bottom: 16px;
+  color: #ffffff;
   display:flex;
   flex-direction: column;
-  /*border: 1px solid red;*/
 }
 
 .footer__column-link {
@@ -405,9 +388,7 @@ h2 {
   color: #ffffff;
 }
 
-.icon-size {
+footer__social-icon {
   height: 16px;
   width: 16px;
 }
-
-
