--- a/styles/style.css
+++ b/styles/style.css
@@ -9,28 +9,12 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-p {
-  margin: 0;
-}
-
-h1 {
-  margin: 0;
-}
-
-h2 {
-  margin: 0;
-}
-
-h3 {
-  margin: 0;
-}
-
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  background-color: #f2f2f2;
   color: #000000;
+  background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -55,7 +39,7 @@ h3 {
 
 .header__title {
   width: 730px;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
@@ -70,6 +54,7 @@ h3 {
   font-size: 18px;
   font-weight: normal;
   position: absolute;
+  margin: 0;
   z-index: 9;
 }
 
@@ -97,16 +82,15 @@ h3 {
 }
 
 .description {
-  background-color: #ffffff;
   color: #000000;
+  background-color: #ffffff;
   display:flex;
   flex-direction: row;
   justify-content: center;
 }
 
 .two-columns {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin: 100px 0 100px;
   width: 80%;
   display:flex;
   flex-direction: row;
@@ -120,7 +104,8 @@ h3 {
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
-  word-wrap:break-word;
+  word-wrap: break-word;
+  margin: 0;
 }
 
 .two-columns__main-text {
@@ -133,11 +118,11 @@ h3 {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  margin: 0 0 30px;
 }
 
-.two-columns__paragraph_margin {
-  margin-top: 30px;
-  margin-bottom: 30px;
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
@@ -147,6 +132,7 @@ h3 {
 }
 
 .digits {
+  color: #000000;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -159,17 +145,11 @@ h3 {
   font-size: 60px;
   font-weight: bold;
   text-align: center;
-}
-
-.section-title_theme_light {
-  margin-top: 100px;
-  margin-bottom: 20px;
-  color:  #000000;
+  margin: 100px 0 20px;
 }
 
 .section-title_theme_dark {
   margin-top: 90px;
-  margin-bottom: 20px;
   color: #ffffff;
   z-index: 9;
 }
@@ -180,10 +160,7 @@ h3 {
   font-size: 24px;
   font-weight: normal;
   text-align: center;
-}
-
-.section-subtitle_theme_light {
-  color: #000000;
+  margin: 0;
 }
 
 .section-subtitle_theme_dark {
@@ -192,39 +169,26 @@ h3 {
 }
 
 .table {
-  margin-left: auto;
-  margin-right: auto;
-  display:flex;
-  flex-direction: column;
-}
-
-.table_theme_light {
   width: 1100px;
-  margin-bottom: 100px;
+  margin: 0 auto 100px;
+  display:flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .table_theme_dark {
-  margin-bottom: 90px;
+  margin: 0 0 90px;
   z-index: 10;
 }
 
-.table__row {
-  display:flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.table__cell_theme_light {
+.table__cell {
   width: 250px;
-  margin-top: 60px;
-  margin-right: 0;
-  color: #000000;
+  margin: 60px 0 0;
 }
 
 .table__cell_theme_dark {
   width: 200px;
-  margin-top: 80px;
-  margin-right: 0;
+  margin: 80px 0 0;
   color: #ffffff;
 }
 
@@ -232,10 +196,7 @@ h3 {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-}
-
-.table__heading_theme_light {
-  color: #000000;
+  margin: 0;
 }
 
 .table__heading_theme_dark {
@@ -246,11 +207,7 @@ h3 {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-top: 20px;
-}
-
-.table__text_theme_light {
-  color: #000000;
+  margin: 20px 0 0;
 }
 
 .table__text_theme_dark {
@@ -258,7 +215,7 @@ h3 {
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   color: #000000;
   display: flex;
@@ -269,11 +226,11 @@ h3 {
 
 .feynman__title {
   width: 648px;
-  margin-top: 100px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
   text-align: center;
+  margin: 100px 0 0;
   z-index: 10;
 }
 
@@ -281,7 +238,7 @@ h3 {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  margin-top: 70px;
+  margin: 70px 0 0;
   z-index: 10;
 }
 
@@ -305,7 +262,7 @@ h3 {
 }
 
 .kaufman {
-  background-color: #000000;
+  background-color: #1f1f1f;
   color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -320,10 +277,11 @@ h3 {
   position: absolute;
   top: 0;
   right: -210px;
+  background-image: url(../images/kaufman-triangle.svg);
 }
 
 .footer {
-  background-color: #000000;
+  background-color: #1f1f1f;
   color: #ffffff;
   min-height: 350px;
   display:flex;
@@ -332,29 +290,30 @@ h3 {
 }
 
 .footer__columns {
-  margin-top: 60px;
-  margin-bottom: 40px;
+  margin: 60px 0 40px;
   width: 90%;
   display:flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.footer__column_content_copyright {
-  flex-basis: 711px;
+.footer__column {
   display:flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+
 .footer__column_content_info {
-  display:flex;
-  flex-direction: column;
+  justify-content:flex-start;
 }
 
 .footer__column_content_social {
-  display:flex;
-  flex-direction: column;
+  justify-content:flex-start;
 }
 
 .footer__author {
@@ -369,27 +328,28 @@ h3 {
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  margin: 0;
 }
 
 .footer__column-links {
-  margin-top: 20px;
-  margin-bottom: 16px;
-  color: #ffffff;
-  display:flex;
-  flex-direction: column;
+  margin-top: 20px 0 16px;
+  padding: 0;
+  list-style-type: none;
+   color: #ffffff;
 }
 
 .footer__column-link {
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
   text-decoration: none;
   color: #ffffff;
 }
 
-footer__social-icon {
+.footer__social-icon {
   height: 16px;
   width: 16px;
+  margin-right: 10px;
 }
+
