--- a/styles/style.css
+++ b/styles/style.css
@@ -90,7 +90,7 @@
 }
 
 .two-columns {
-  margin: 100px 0 100px;
+  margin: 100px 0 0;
   width: 80%;
   display:flex;
   flex-direction: row;
@@ -332,7 +332,7 @@
 }
 
 .footer__column-links {
-  margin-top: 20px 0 16px;
+  margin: 20px 0 16px;
   padding: 0;
   list-style-type: none;
    color: #ffffff;
