--- a/styles/style.css
+++ b/styles/style.css
@@ -1,355 +1,88 @@
-.page {
-  min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
-  max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-}
-
-.header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  color: #000000;
-  background-color: #f2f2f2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position:relative;
-}
-
-.logo {
-  width: 183px;
-}
-
-.logo_place_header {
-  height: 32px;
-  top: 30px;
-  left: 64px;
-  position:absolute;
-  z-index: 9;
-}
-
-.logo_place_footer {
-  height: 35px;
-}
-
-.header__title {
-  width: 730px;
-  margin: 0 0 0 64px;
-  line-height: 96px;
-  font-size: 102px;
-  font-weight: bold;
-  z-index: 9;
-}
-
-.header__subtitle {
-  width: 388px;
-  left:64px;
-  bottom: 30px;
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  position: absolute;
-  margin: 0;
-  z-index: 9;
-}
-
-.header__link {
-  font-size: 18px;
-  text-decoration: none;
-  color: #2f80ed;
-}
-
-.header__main-illustration{
-  height: 608px;
-  width: 765px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-.header__square-pic {
-  height: 568px;
-  width: 568px;
-  top: 64px;
-  right: 0;
-  background-color:#2f80ed;
-  position: absolute;
-}
-
-.description {
-  color: #000000;
-  background-color: #ffffff;
-  display:flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.two-columns {
-  margin: 100px 0 0;
+.techniques {
   width: 80%;
-  display:flex;
-  flex-direction: row;
-  justify-content: space-between;
-  min-width: 784px;
-}
-
-.two-columns__brief {
-  width: 175px;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-  color: #2f80ed;
-  word-wrap: break-word;
-  margin: 0;
-}
-
-.two-columns__main-text {
-  width: 80%;
-  display:flex;
-  flex-direction: column;
-}
-
-.two-columns__paragraph {
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  margin: 0 0 30px;
-}
-
-.two-columns__paragraph:last-child {
-  margin-bottom: 0;
-}
-
-.two-columns__span-accent {
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: bold;
-}
-
-.digits {
+  margin:0 auto 0;
   color: #000000;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid red;
 }
 
-.section-title {
-  width: 60%;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: bold;
-  text-align: center;
-  margin: 100px 0 20px;
-}
-
-.section-title_theme_dark {
-  margin-top: 90px;
-  color: #ffffff;
-  z-index: 9;
-}
-
-.section-subtitle {
-  width: 60%;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  text-align: center;
-  margin: 0;
-}
-
-.section-subtitle_theme_dark {
-  color: white;
-  z-index: 9;
-}
-
-.table {
-  width: 1100px;
-  margin: 0 auto 100px;
+.cards {
+  width: 920px;
   display:flex;
-  justify-content: space-between;
+  flex-direction: row;
   flex-wrap: wrap;
+  border: 1px solid red;
 }
 
-.table_theme_dark {
-  margin: 0 0 90px;
-  z-index: 10;
+.cards__item {
+  /*
+  .demo__item:nth-of-type(2n) {
+    margin-right: 0;
+  }
+
+  .demo__item:first-of-type, .demo__item:nth-of-type(2) {
+    margin-top: 0;
+  }
+  */
+  width: calc(100% / 3 - 100px);
+  margin-right: 90px;
+  border: 1px solid red;
 }
 
-.table__cell {
-  width: 250px;
-  margin: 60px 0 0;
+.cards__image {
+  height: 160px;
+  width: 160px;
+  margin: 60px 40px 0;
+  border: 1px solid red;
 }
 
-.table__cell_theme_dark {
-  width: 200px;
-  margin: 80px 0 0;
-  color: #ffffff;
-}
-
-.table__heading {
+.cards__title {
+  margin-top: 43px;
+  text-align: center;
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-  margin: 0;
+  border: 1px solid red;
 }
 
-.table__heading_theme_dark {
-  color: #ffffff;
-}
-
-.table__text {
-  line-height: 1.2;
+.cards__description {
+  line-height: 23px;
   font-size: 18px;
   font-weight: normal;
-  margin: 20px 0 0;
-}
-
-.table__text_theme_dark {
-  color: #ffffff;
-}
-
-.feynman {
-  min-height: 890px;
-  background-color: #f2f2f2;
-  color: #000000;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position:relative;
-}
-
-.feynman__title {
-  width: 648px;
-  line-height: 1.15;
-  font-size: 120px;
-  font-weight: bold;
+  margin: 16px 0 0;
   text-align: center;
-  margin: 100px 0 0;
-  z-index: 10;
+  border: 1px solid red;
 }
 
-.feynman__subtitle{
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  margin: 70px 0 0;
-  z-index: 10;
-}
-
-.feynman__link {
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  position: absolute;
-  right: 48px;
-  top: 50%;
-  text-decoration: none;
-  color: #2f80ed;
-}
-
- .feynman__img {
-  width: 867px;
-  height: 637px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-.kaufman {
-  background-color: #1f1f1f;
-  color: #ffffff;
+.video {
+  color: #000000;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position:relative;
-  overflow: hidden;
+  margin: 50 auto 0;
 }
 
-.kaufman__triangle {
-  width: 877px;
-  height: 877px;
-  position: absolute;
-  top: 0;
-  right: -210px;
-  background-image: url(../images/kaufman-triangle.svg);
-}
-
-.footer {
-  background-color: #1f1f1f;
-  color: #ffffff;
-  min-height: 350px;
-  display:flex;
+.video__iframes {
+  margin-top: 50px;
+  width: 515px;
+  height: 316px;
+  display: flex;
   flex-direction: row;
-  justify-content: center;
+  align-items: center;
 }
 
-.footer__columns {
-  margin: 60px 0 40px;
-  width: 90%;
-  display:flex;
-  flex-direction: row;
-  justify-content: space-between;
+.video__iframe {
+
+  margin-right: 20px;
 }
 
-.footer__column {
-  display:flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.footer__column_content_copyright {
-  flex-basis: 711px;
-  justify-content: space-between;
-}
-
-.footer__column_content_info {
-  justify-content:flex-start;
-}
-
-.footer__column_content_social {
-  justify-content:flex-start;
-}
-
-.footer__author {
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  margin-top: 18px;
-  margin-bottom: 18px;
-}
-
-.footer__column-heading {
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: bold;
-  margin: 0;
-}
-
-.footer__column-links {
-  margin: 20px 0 16px;
-  padding: 0;
-  list-style-type: none;
-   color: #ffffff;
-}
-
-.footer__column-link {
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-  margin: 0;
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.footer__social-icon {
-  height: 16px;
-  width: 16px;
-  margin-right: 10px;
-}
+/*.resources__logo-zone {
+<div class="resources__logo-zone">
+        <img class="resources__logo" src="images/resources-arzamas.svg" alt="">
+      </div>
+}*/
 
