--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -3,7 +3,8 @@
   font-size: 30px;
   font-weight: normal;
   margin: 0;
-  border: 1px solid red;
+  text-decoration: none;
+  color: #2f80ed;
 }
 
 .khan__buy-link:hover {
