--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -1,6 +1,7 @@
-.khan__quote-author {
+.cards__title {
+  margin: 43px 0 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-  margin: 36px 0 0;
+  text-align: center;
 }
