--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -4,5 +4,7 @@
   display:flex;
   flex-direction: row;
   justify-content: center;
-  border: 1px solid red;
+  padding: 160px 0 0;;
+  position: relative;
+  z-index: -1;
 }
