--- a/blocks/techniques/techniques.css
+++ b/blocks/techniques/techniques.css
@@ -1,8 +1,10 @@
-.resources {
+.techniques {
+  width: 80%;
+  margin:0 auto 0;
   color: #000000;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100px 0 217px;
+  padding: 100px 0 0;
 }
