--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,4 +1,11 @@
 .resources__logo {
   width: 270px;
   height: 38px;
+  margin: 0;
+  padding: 0;
+}
+
+.resources__logo:hover {
+  opacity: 0.7;
+  transition: opacity linear .2s;
 }
